fix spacing for price dashboard

--- a/src/modules/blocks/event-price/style.pcss
+++ b/src/modules/blocks/event-price/style.pcss
@@ -50,6 +50,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	margin: 24px 22px 0;
 
 	input.tribe-editor__event-price__input {
 		border: 1px solid #E1E3E6;
@@ -67,6 +68,7 @@
 		color: #8D949B;
 		font-size: 0.75rem;
 		padding: 4px 11px;
+		margin: 0 22px 20px;
 	}
 }
 
